name: swarm-dht
version: 0.1.0.0
synopsis: BitTorrent Mainline DHT
-- description:
homepage: http://github.com/drdo/swarm-dht
license: MIT
license-file: LICENSE
author: Daniel Rebelo de Oliveira
maintainer: drdo@drdo.eu
category: Network
build-type: Simple
cabal-version: >=1.10
library
  exposed-modules: Network.BitTorrent.DHT,
                   Network.BitTorrent.DHT.Internal,
                   Network.BitTorrent.DHT.KBucket,
                   Network.BitTorrent.DHT.Types
  default-language: Haskell2010
  other-extensions: FlexibleContexts,
                    GeneralizedNewtypeDeriving,
                    LambdaCase,
                    MultiWayIf,
                    NumDecimals,
                    OverloadedLists,
                    OverloadedStrings,
                    RecordWildCards,
                    ScopedTypeVariables,
                    TupleSections,
                    UnicodeSyntax,
                    ViewPatterns
  build-depends: base >=4.8 && <5,
                 binary >=0.7,
                 bytestring >=0.10,
                 containers >=0.2,
                 cryptohash >=0.6,
                 data-default >=0.2,
                 lens >=2.0,
                 lifted-async >=0.0.0.1,
                 lifted-base >=0.2,
                 monad-control >=0.3,
                 mtl >=1.0,
                 network >=2.0,
                 random >=1.0.1,
                 stm >=2.4,
                 swarm-bencode >=0.1,
                 swarm-common >=0.1,
                 time >=1.0,
                 transformers-base >=0.1,
                 utf8-string >=0.3,
                 vector >=0.7
